** 2006-07-17 by fab
ADD: Sample Profit and Loss report + fixes

** 2006-06-20 by fab
ADD: patched trial balance and journal

** 2006-06-17 by fab
Initial commit